# MORT

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  meson.build
.github/workflows/: ci.yml  on_push.yml
cmake/: avr.cmake
docs/: parts.md  requirements.md
meson/: avr-cross.txt
src/: hw.h  main.c  meson.build
src/bsp/io/: io.c  io.h  pins.h
src/bsp_atmega328p/: meson.build
src/bsp_atmega328p/include/bsp/: hw_defs.h
src/bsp_atmega328p/include/bsp/dsa/: queue.h  ring_buffer.h
src/bsp_atmega328p/include/bsp/io/: io.h
src/bsp_atmega328p/include/bsp/usart/: usart.h
src/bsp_atmega328p/src/dsa/: queue.c  ring_buffer.c
src/bsp_atmega328p/src/io/: io.c
src/bsp_atmega328p/src/usart/: usart.c
src/bsp_atmega328p/src/util/: assert.c
src/mort/: hw.c  hw.h
subprojects/: printf.wrap
tools/: Dockerfile
